--- a/ogapp/templates/contact.html
+++ b/ogapp/templates/contact.html
@@ -130,7 +130,7 @@
                       <option value="1002">Two Bedrooms</option>
                       <option value="1003">Three Bedrooms</option>
                       <option value="1004">Four Bedrooms +</option>
-                      <option value="1005">Few items - 95$</option>
+                      <option value="1005">Few items</option>
                       <option value="1006">Piano</option>
                       <option value="1007">Pool Table</option>
 
@@ -165,6 +165,23 @@
 
   </div>
   </div>
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    <div class="col-md-4 d-flex align-items-center">
+      <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+        <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+      </a>
+      <span class="text-muted">© 2024 Company, Inc</span>
+    </div>
+    <a href="https://mandeep.pythonanywhere.com/" class="text-muted m-3">Developer © 2024</a>
+  </footer>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16485596543"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-16485596543');
+</script>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
