--- a/ogapp/templates/privacy.html
+++ b/ogapp/templates/privacy.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy - OG Movers</title>
+	<link rel="shortcut icon" href="{% static 'favicon.ico' %}">
+
 
 </head>
 
