--- a/ogapp/templates/terms.html
+++ b/ogapp/templates/terms.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms and Conditions - OG Movers</title>
+	<link rel="shortcut icon" href="{% static 'favicon.ico' %}">
+
 
 </head>
 <body>
