--- a/ogapp/templates/thankyou.html
+++ b/ogapp/templates/thankyou.html
@@ -3,7 +3,9 @@
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+	<title>OG Movers</title>
+	<link rel="shortcut icon" href="{% static 'favicon.ico' %}">
+
 	<link href='https://fonts.googleapis.com/css?family=Lato:300,400|Montserrat:700' rel='stylesheet' type='text/css'>
 	<style>
 		@import url(//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css);
